# astrolograph

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  make-clean.sh  make-debug.sh  make-mingw.sh  make-release.sh  mingw-w64-x86_64.cmake
examples/: complex-example.ags  simple-example.ags
inc/: CMakeLists.txt  aspectNode.hpp  astro.hpp  chart.hpp  chartCompare.hpp  chartDataNode.hpp  chartNode.hpp  chartView.hpp  chartViewNode.hpp  compareNode.hpp  dateTime.hpp  ephemeris.hpp  geometry.hpp  glfwKeys.hpp  groupNode.hpp  location.hpp  locationNode.hpp  locationWidget.hpp  moonNode.hpp  node.hpp  nodeGraph.hpp  nodeList.hpp  param.hpp  plotNode.hpp  plotWidget.hpp  progressNode.hpp  rect.hpp  setting.hpp  settingForm.hpp  settingsForm.hpp  shader.hpp  shapeBuffer.hpp  timeNode.hpp  timeWidget.hpp  tools.hpp  typelessMap.hpp  vector.hpp  viewSettings.hpp
inc/version/: astrosimVersion.hpp  astrosimVersion.hpp.in  version.hpp  version.hpp.in
libs/: CMakeLists.txt
libs/date/: CMakeLists.txt
libs/glfw/: CMakeLists.txt
libs/imgui/: CMakeCache.txt  CMakeLists.txt  ImGuiFileBrowser.cpp  Makefile  cmake_install.cmake  imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  imgui_widgets.cpp
libs/imgui/date/: Makefile  cmake_install.cmake
libs/imgui/imgui/: Makefile  cmake_install.cmake
libs/imgui/include/: ImGuiFileBrowser.h  imconfig.h
libs/imgui/src/: ImGuiFileBrowser.cpp
libs/swe/: CMakeLists.txt
libs/swe/ephe/: fixstars.cat
libs/swe/ephe/ast0/: se00019s.se1
libs/swe/ephe/ast50/: se50000.se1  se50033.se1  se50240.se1  se50250.se1  se50251.se1  se50412.se1  se50413.se1  se50428.se1  se50687.se1  se50717.se1  se50718.se1  se50719.se1  se50721.se1  se50722.se1  se50768.se1  se50866.se1
res/: inside-degrees.txt
res/icons/: app-icon.xcf
shaders/: moonRender.fsh  moonRender.vsh  moonRenderFancy.fsh  moonRenderFancy.vsh
src/: CMakeLists.txt  aspectNode.cpp  astro.cpp  chart.cpp  chartCompare.cpp  chartDataNode.cpp  chartNode.cpp  chartView.cpp  chartViewNode.cpp  compareNode.cpp  dateTime.cpp  ephemeris.cpp  groupNode.cpp  location.cpp  locationNode.cpp  locationWidget.cpp  moonNode.cpp  node.cpp  nodeGraph.cpp  nodeList.cpp  plotNode.cpp  plotWidget.cpp  progressNode.cpp  setting.cpp  settingForm.cpp  settingsForm.cpp  shapeBuffer.cpp  timeNode.cpp  timeWidget.cpp  viewSettings.cpp
