cmake_minimum_required(VERSION 3.6)
# include_directories(../inc)
# add_library( astro STATIC
#   aspectNode.cpp
#   astro.cpp
#   chartCompare.cpp
#   chart.cpp
#   chartDataNode.cpp
#   chartNode.cpp
#   chartView.cpp
#   chartViewNode.cpp
#   compareNode.cpp
#   dateTime.cpp
#   ephemeris.cpp
#   location.cpp
#   locationNode.cpp
#   locationWidget.cpp
#   node.cpp
#   nodeGraph.cpp
#   progressNode.cpp
#   timeNode.cpp
#   timeWidget.cpp
#   )
